--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 .navbar {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;  
-    margin: 5px;
+    justify-content: space-between;;
+    padding: 10px;
+}
+.navbar button {
+    margin-right: 10px;
 }
 
